# bundlemanager_app_domain_verify

./: .clang-format  .gitignore  0001-napi.patch  0001-support-deferred-link-bms-query-flag.patch  0001-support-deferred-link-napi-fix-report.patch  0001-support-deferred-link-napi-fix.patch  0001-support-deferred-link-napi.patch  0001-support-deferred-link-opt-ipc-with-bms-ut.patch  0001-support-deferred-link-opt-ipc-with-bms.patch  0001-support-deferred-link-remove-batch-urls.patch  0001-support-deferred-link-ut.patch  0001-support-deferred-link.patch  BUILD.gn  README.en.md  README.md  app_domain_verify.gni  bundle.json  hisysevent.yaml
etc/: BUILD.gn  (+1 more)
frameworks/app_details_rdb/: BUILD.gn  appdetailsrdb.versionscript
frameworks/app_details_rdb/include/: app_details_base_item.h  app_details_meta_item.h  app_details_rdb_const_define.h  app_details_rdb_data_define.h  app_details_rdb_data_manager.h  app_details_rdb_item.h  app_details_rdb_open_callback.h
frameworks/app_details_rdb/src/: app_details_meta_item.cpp  app_details_rdb_data_manager.cpp  app_details_rdb_item.cpp  app_details_rdb_open_callback.cpp
frameworks/common/: BUILD.gn  common.versionscript
frameworks/common/include/: app_domain_verify_error.h  app_domain_verify_hilog.h  app_domain_verify_hisysevent.h  app_domain_verify_parcel_util.h  parcel_util.h
frameworks/common/include/bms/: bundle_info_query.h
frameworks/common/include/config/: white_list_config_mgr.h  white_list_updater.h
frameworks/common/include/dfx/: app_domain_verify_hisysevent.h  app_domain_verify_xcollie_helper.h
frameworks/common/include/httpsession/: app_domain_verify_task_mgr.h  ffrt_safe_map.h  i_http_task.h
frameworks/common/include/permission/: permission_manager.h
frameworks/common/include/utils/: critial_utils.h  domain_url_util.h  lru_cache_util.h
frameworks/common/src/bms/: bundle_info_query.cpp
frameworks/common/src/config/: white_list_checker.cpp  white_list_config_mgr.cpp
frameworks/common/src/httpsession/: app_domain_verify_task_mgr.cpp  i_http_task.cpp
frameworks/common/src/permission/: permission_manager.cpp
frameworks/common/src/utils/: critical_utils.cpp  domain_url_util.cpp
interfaces/inner_api/client/: BUILD.gn  agent.versionscript  mgr.versionscript
interfaces/inner_api/client/include/: app_domain_cloud_verify_client.h  app_domain_verify_agent_client.h  app_domain_verify_client.h  app_domain_verify_mgr_client.h
interfaces/inner_api/client/sa_interface/: agent_interface_code.h
interfaces/inner_api/client/src/: app_domain_cloud_verify_client.cpp  app_domain_verify_agent_client.cpp  app_domain_verify_client.cpp  app_domain_verify_mgr_client.cpp
interfaces/inner_api/common/: BUILD.gn  common.versionscript
interfaces/inner_api/common/include/: app_domain_verify_error.h  app_domain_verify_hilog.h  app_domain_verify_hisysevent.h  app_verify_base_info.h  bundle_verify_status_info.h  comm_define.h  common_utils.h  domain_verify_status.h  inner_verify_status.h  parcel_util.h  skill_uri.h
interfaces/inner_api/common/src/: app_verify_base_info.cpp  bundle_verify_status_info.cpp  common_utils.cpp  skill_uri.cpp
interfaces/inner_api/extension/: BUILD.gn  extension.versionscript
interfaces/inner_api/extension/include/: app_domain_verify_agent_ext.h  app_domain_verify_cloud_ext.h  app_domain_verify_ext_base.h  app_domain_verify_extension_mgr.h  app_domain_verify_extension_register.h
interfaces/inner_api/extension/src/: app_domain_verify_agent_ext.cpp  app_domain_verify_extension_mgr.cpp  app_domain_verify_extension_register.cpp
interfaces/inner_api/verifier/: BUILD.gn  verifier.versionscript
interfaces/inner_api/verifier/include/: domain_json_util.h  i_verify_task.h  verify_task.h
interfaces/inner_api/verifier/src/: domain_json_util.cpp  verify_task.cpp
interfaces/kits/js/: BUILD.gn
interfaces/kits/js/ani/: BUILD.gn
interfaces/kits/js/app_domain_verify/: BUILD.gn
interfaces/kits/js/deferred_link/: BUILD.gn
interfaces/kits/js/include/: api_event_reporter.h
interfaces/kits/js/jsi/: BUILD.gn
interfaces/kits/js/src/: api_event_reporter.cpp  app_domain_verify_manager_napi.cpp  config_parser.cpp  native_module.cpp
services/: BUILD.gn
services/include/adv/core/: app_domain_verify_interface_code.h  i_app_domain_verify_service.h
services/include/adv/zidl/: app_domain_verify_service_proxy.h
services/include/agent/bms/: bundle_info_query.h
services/include/agent/core/: agent_interface_code.h  app_domain_verify_agent_service.h  asset_json_obj.h  domain_verifier.h  i_app_domain_verify_agent_service.h
services/include/agent/data_share/: setting_data_share_helper.h
services/include/agent/httpsession/: app_domain_verify_task_mgr.h  verify_http_task.h  verify_http_task_factory.h
services/include/agent/zidl/: app_domain_verify_agent_service_proxy.h  app_domain_verify_agent_service_stub.h
services/include/cloud/core/: cloud_verify_interface_code.h  i_cloud_verify_service.h
services/include/cloud/zidl/: cloud_verify_service_proxy.h
services/include/manager/constant/: manager_constants.h
services/include/manager/core/: app_details_data_mgr.h  app_domain_verify_data_mgr.h  app_domain_verify_mgr_interface_code.h  app_domain_verify_mgr_service.h  (+1 more)
test/fuzztest/appdomainverifymgrservice_fuzzer/: BUILD.gn  app_domain_verify_mgr_service_fuzz_test.cpp  app_domain_verify_mgr_service_fuzz_test.h
test/unittest/: BUILD.gn
test/unittest/app_details_rdb/: BUILD.gn  app_details_rdb_data_manager_test.cpp
test/unittest/client/: BUILD.gn  app_domain_verify_agent_client_test.cpp  app_domain_verify_mgr_client_test.cpp
test/unittest/common/: BUILD.gn  bean_test.cpp
test/unittest/extension/: BUILD.gn  extension_test.cpp
test/unittest/moduletest/: BUILD.gn  app_domain_verify_agent_module_test.cpp  app_domain_verify_mgr_module_test.cpp
test/unittest/services/: BUILD.gn  app_domain_verify_agent_module_test.cpp  app_domain_verify_mgr_module_test.cpp
test/unittest/verifier/: BUILD.gn  domain_json_util_test.cpp  domain_verifier_test.cpp  moc_verify_task.h  verify_task_test.cpp
(+220 files in other folders)
