# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

################################################################################

group("app_domain_verify_packages") {
  if (is_standard_system) {
    deps = [
      "etc/init:app_domain_verify_agent.cfg",
      "etc/init:app_domain_verify_mgr.cfg",
      "interfaces/inner_api/client:app_domain_verify_agent_client",
      "interfaces/inner_api/client:app_domain_verify_mgr_client",
      "interfaces/inner_api/common:app_domain_verify_common",
      "interfaces/inner_api/extension:app_domain_verify_extension_framework",
      "interfaces/inner_api/verifier:app_domain_verify_agent_verifier",
      "profile:bundlemanager_app_domain_verify_sa_profiles",
      "services:app_domain_verify_agent_service",
      "services:app_domain_verify_mgr_service",
    ]
  }
}
