# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

ability_runtime_napi_path =
    "//foundation/ability/ability_runtime/frameworks/js/napi"

app_domain_verify_root_path = "//foundation/bundlemanager/app_domain_verify"

app_domain_verify_client_path =
    "${app_domain_verify_root_path}/interfaces/inner_api/client"

app_domain_verify_extension_path =
    "${app_domain_verify_root_path}/interfaces/inner_api/extension"

app_domain_verify_common_path =
    "${app_domain_verify_root_path}/interfaces/inner_api/common"

app_domain_verify_service_path = "${app_domain_verify_root_path}/services"

app_domain_verify_verifier_path =
    "${app_domain_verify_root_path}/interfaces/inner_api/verifier"

app_domain_verify_test_path = "${app_domain_verify_root_path}/test/unittest"
