# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/bundlemanager/app_domain_verify/app_domain_verify.gni")
import("//foundation/distributeddatamgr/relational_store/relational_store.gni")
import("//foundation/communication/netstack/netstack_config.gni")

config("app_domain_verify_service_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "${app_domain_verify_client_path}/include",
    "include/manager/constant",
    "include/manager/core",
    "include/manager/rdb",
    "include/manager/zidl",
    "include/agent/core",
    "${app_domain_verify_common_path}/include",
    "${app_domain_verify_common_path}/include/utils",
    "${relational_store_innerapi_path}/rdb/include",
    "//third_party/json/include",
  ]
  configs = [ "//build/config/compiler:exceptions" ]
  ldflags = [ 
    "-Wl,--exclude-libs=ALL",
    ]
  cflags = [
    "-fdata-sections",
    "-ffunction-sections",
    "-fvisibility=hidden",
  ]
}

ohos_shared_library("app_domain_verify_mgr_service") {
  sources = [
    "src/manager/core/app_domain_verify_data_mgr.cpp",
    "src/manager/core/app_domain_verify_mgr_service.cpp",
    "src/manager/zidl/app_domain_verify_mgr_service_stub.cpp",
    "src/manager/zidl/app_domain_verify_mgr_service_proxy.cpp",
    "src/manager/rdb/app_domain_verify_rdb_data_manager.cpp",
    "src/manager/rdb/app_domain_verify_rdb_open_callback.cpp",
  ]
  public_configs = [
    ":app_domain_verify_service_config",
  ]
  deps = [
    "${app_domain_verify_common_path}:app_domain_verify_common",
    "${app_domain_verify_client_path}:app_domain_verify_agent_client",
    "//third_party/json:nlohmann_json_static",
  ]
  defines = [ "API_EXPORT=__attribute__((visibility (\"default\")))" ]
  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ability_runtime:ability_manager",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "relational_store:native_rdb",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "ffrt:libffrt",
    "hisysevent:libhisysevent",
  ]

  subsystem_name = "bundlemanager"
  part_name = "app_domain_verify"
}

config("app_domain_verify_agent_service_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "${app_domain_verify_client_path}/include",
    "include/agent/bms",
    "include/agent/constant",
    "include/agent/core",
    "include/agent/httpsession",
    "include/agent/utils",
    "include/agent/zidl",
    "include/manager/core",
    "include/manager/zidl",
    "${app_domain_verify_common_path}/include",
    "${app_domain_verify_common_path}/include/utils",
    "//third_party/json/include",
    "${appexecfwk_base_root_path}/include",
    "${app_domain_verify_extension_path}/include"
  ]
  configs = [ "//build/config/compiler:exceptions" ]
  ldflags = [ 
    "-Wl,--exclude-libs=ALL",
    ]
  cflags = [
    "-fdata-sections",
    "-ffunction-sections",
    "-fvisibility=hidden",
  ]
}

ohos_shared_library("app_domain_verify_agent_service") {
  sources = [
    "src/agent/bms/bundle_info_query.cpp",
    "src/agent/core/app_domain_verify_agent_service.cpp",
    "src/agent/core/domain_verifier.cpp",
    "src/agent/httpsession/app_domain_verify_task_mgr.cpp",
    "src/agent/httpsession/verify_http_task_factory.cpp",
    "src/agent/httpsession/verify_http_task.cpp",
    "src/agent/zidl/app_domain_verify_agent_service_stub.cpp",
    "src/agent/zidl/app_domain_verify_agent_service_proxy.cpp",
    "src/agent/utils/domain_json_util.cpp",
  ]
  public_configs = [
    ":app_domain_verify_agent_service_config",
  ]
  defines = [ "API_EXPORT=__attribute__((visibility (\"default\")))" ]
  deps = [
    "${app_domain_verify_common_path}:app_domain_verify_common",
    "${app_domain_verify_extension_path}:app_domain_verify_extension_framework",
    "${app_domain_verify_client_path}:app_domain_verify_mgr_client",
    "//third_party/json:nlohmann_json_static",
    "//third_party/curl:curl_shared",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ability_runtime:ability_manager",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "netstack:http_client",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "os_account:os_account_innerkits",
    "ffrt:libffrt",
    "eventhandler:libeventhandler",
    "hisysevent:libhisysevent",
  ]

  subsystem_name = "bundlemanager"
  part_name = "app_domain_verify"
}