# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/bundlemanager/app_domain_verify/app_domain_verify.gni")

config("app_domain_verify_frameworks_common_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "include/utils",
    "include/httpsession",
    "include/bms",
    "include/zidl",
    "include/config",
  ]
  cflags = [
    "-fdata-sections",
    "-ffunction-sections",
    "-Os",
  ]

  cflags_cc = [ "-Os" ]
}

ohos_shared_library("app_domain_verify_frameworks_common") {
  sources = [
    "src/bms/bundle_info_query.cpp",
    "src/config/white_list_config_mgr.cpp",
    "src/httpsession/app_domain_verify_task_mgr.cpp",
    "src/httpsession/i_http_task.cpp",
    "src/utils/domain_url_util.cpp",
  ]

  public_configs = [ ":app_domain_verify_frameworks_common_config" ]
  version_script = "common.versionscript"
  deps = [ "${app_domain_verify_common_path}:app_domain_verify_common" ]
  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "ffrt:libffrt",
    "hilog:libhilog",
    "ipc:ipc_core",
    "json:nlohmann_json_static",
    "netstack:http_client",
    "os_account:os_account_innerkits",
    "preferences:native_preferences",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "bundlemanager"
  part_name = "app_domain_verify"
}
