# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")

group("app_domain_verify_unit_test") {
  testonly = true

  deps = [
    "client:app_domain_verify_client_test",
    "common:app_domain_verify_common_test",
    "extension:app_domain_verify_extension_test",
    "services:app_domain_verify_service_test",
    "services:app_domain_verify_module_test",
  ]
}
