# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")

group("app_domain_verify_unit_test") {
  testonly = true

  deps = [
    "client:app_domain_verify_client_test",
    "common/bean_parcel_test:app_domain_verify_bean_parcel_test",
    "common/bean_test:app_domain_verify_bean_test",
    "common/bms_test:app_domain_verify_bms_test",
    "common/httpsession_test:app_domain_verify_httpsession_test",
    "extension/app_domain_verify_agent_ext_test:app_domain_verify_agent_ext_test",
    "extension/app_domain_verify_extension_mgr_test:app_domain_verify_extension_mgr_test",
    "extension/app_domain_verify_extension_register_test:app_domain_verify_extension_register_test",
    "moduletest:app_domain_verify_module_test",
    "services:app_domain_verify_service_test",
    "verifier:app_domain_verify_agent_verifier_test",
  ]
}
