# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/bundlemanager/app_domain_verify/app_domain_verify.gni")

config("app_domain_verify_mgr_client_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "${app_domain_verify_service_path}/include/manager/core",
    "${app_domain_verify_service_path}/include/manager/zidl",
    "${app_domain_verify_common_path}/include",
  ]
  cflags = [
    "-fdata-sections",
    "-ffunction-sections",
    "-Os",
  ]

  cflags_cc = [ "-Os" ]
}

config("app_domain_verify_agent_client_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "${app_domain_verify_service_path}/include/agent/core",
    "${app_domain_verify_service_path}/include/agent/zidl",
    "${app_domain_verify_common_path}/include",
  ]
  cflags = [
    "-fdata-sections",
    "-ffunction-sections",
    "-Os",
  ]

  cflags_cc = [ "-Os" ]
}

ohos_shared_library("app_domain_verify_mgr_client") {
  sources = [
    "${app_domain_verify_service_path}/src/manager/zidl/app_domain_verify_mgr_service_proxy.cpp",
    "src/app_domain_verify_mgr_client.cpp",
  ]
  configs = [ ":app_domain_verify_mgr_client_config" ]
  public_configs = [ ":app_domain_verify_mgr_client_config" ]
  deps = [ "${app_domain_verify_common_path}:app_domain_verify_common" ]

  external_deps = [
    "ability_base:want",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]
  version_script = "mgr.versionscript"

  subsystem_name = "bundlemanager"
  part_name = "app_domain_verify"
}

ohos_shared_library("app_domain_verify_agent_client") {
  sources = [
    "${app_domain_verify_service_path}/src/agent/zidl/app_domain_verify_agent_service_proxy.cpp",
    "src/app_domain_verify_agent_client.cpp",
  ]
  configs = [ ":app_domain_verify_agent_client_config" ]
  public_configs = [ ":app_domain_verify_agent_client_config" ]
  deps = [ "${app_domain_verify_common_path}:app_domain_verify_common" ]
  version_script = "agent.versionscript"
  external_deps = [
    "ability_base:want",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "bundlemanager"
  part_name = "app_domain_verify"
}
