# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/bundlemanager/app_domain_verify/app_domain_verify.gni")

config("app_domain_verify_common_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "include/zidl",
    "${app_domain_verify_frameworks_common_path}/include",
  ]
  cflags = [
    "-fdata-sections",
    "-ffunction-sections",
    "-Os",
  ]

  cflags_cc = [ "-Os" ]
}

ohos_shared_library("app_domain_verify_common") {
  sources = [
    "src/app_verify_base_info.cpp",
    "src/bundle_verify_status_info.cpp",
    "src/common_utils.cpp",
    "src/skill_uri.cpp",
    "src/zidl/convert_callback_proxy.cpp",
    "src/zidl/convert_callback_stub.cpp",
  ]

  public_configs = [ ":app_domain_verify_common_config" ]
  version_script = "common.versionscript"

  external_deps = [
    "ability_base:want",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "json:nlohmann_json_static",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  subsystem_name = "bundlemanager"
  part_name = "app_domain_verify"
}
